--- a/.github/workflows/daily-run.yml
+++ b/.github/workflows/daily-run.yml
@@ -25,4 +25,5 @@ jobs:
         env:
           NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
           NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+          TABLE_NAME: ${{ secrets.TABLE_NAME }}
         run: node supabase-query.js
